sql推荐歌单添加和首页导航栏

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -8,27 +8,65 @@
 </head>
 <body>
   <!-- 头部 -->
-  <div class="top_header">
-    <div class="top_header_box">
-      <div class="logo"><a href="#" class="logo"><img src="./img/logo.png" alt="qq音乐logo图标" title="qq音乐"></div>
-      <ul class="top_header_title">
-        <li><a href="#">音乐馆</a></li>
-        <li>我的音乐</li>
-        <li>商城</li>
-        <li>登入</li>
-      </ul>
-      <input type="text" name="select" class="select">
-      <span>登入</span>
-      <button>开通vip</button>
-      <ul class="top_header_search">
-        <li>首页</li>
-        <li>歌手</li>
-        <li>排行榜</li>
-        <li>资料</li>
-      </ul>
-    </div>
-   
-  </div>
+  <header id="header">
+      <div class="header">
+        <!-- 导航 -->
+        <div class="header-nav">
+          <!-- logo -->
+          <div class="logo">
+            <img src="./img/logo.png" title="qq音乐" alt="qq音乐" >
+          </div>
+          <!-- 导航内容 -->
+          <ul class="list-nav">
+            <li>
+              <p>音乐馆</p>
+            </li>
+            <li>
+              <p>我的音乐</p>
+            </li>
+            <li>
+              <p>客户端</p>
+            </li>
+            <li>
+              <p>商城</p>
+            </li>
+            <li>
+              <p>VIP</p>
+            </li>
 
+          </ul>
+          <!-- 搜索框 -->
+          <input type="text" class="select" name="">
+          <span>登陆</span>
+          <!-- 下拉框 -->
+          <select name="" id="select">
+            <option value="开通VIP">开通vip</option>
+          </select>
+          <!-- 下拉框 -->
+          <select name="" id="select2">
+            <option value="开通">充值</option>
+          </select>
+        </div>
+        
+        <!-- <div class="header-dao">
+          <ul>
+            <li>首页</li>
+            <li>歌手</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul> -->
+        </div>
+      </div>
+  </header>
+
+  <!-- 展示部分 -->
+  <article id="article" class="content-ceter">
+    <!-- 第一个展示区  歌单推荐-->
+    <div class="article-row">
+
+    </div>
+  </article>
 </body>
 </html>
