--- a/public/home/index.html
+++ b/public/home/index.html
@@ -83,17 +83,84 @@
           <div class="row-left">
             <h3>下载QQ音乐客户端</h3>
             <ul>
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
+              <li>
+                <p class="ico_pc"></p>
+                <p>PC版</p>
+              </li>
+              <li>
+                <p class="ico_mac"></p>
+                <p>Mac版</p>
+              </li>
+              <li>
+                <p class="ico_and"></p>
+                <p>Android版</p>
+              </li>
+              <li>
+                <p class="ico_iph"></p>
+                <p>iPhone版</p>
+              </li>
             </ul>
           </div>
-          <div class="row-midde"></div>
-          <div class="row-right"></div>
+          <div class="row-midde">
+            <h3>特色产品</h3>
+            <ul>
+              <li>
+                <p class="ico_pc"></p>
+                <p>全面k歌</p>
+              </li>
+              <li>
+                <p class="ico_mac"></p>
+                <p>Super Sound 
+                </p>
+              </li>
+              <li>
+                <p class="ico_and"></p>
+                <p>QPlay</p>
+              </li>
+              <li>
+                <p class="ico_iph"></p>
+                <p>Fan直播伴侣</p>
+              </li>
+            </ul>
+          </div>
+          <div class="row-right">
+            <h3>合作链接</h3>
+            <ul>
+              <li>CJ ENM</li>
+              <li>腾讯视频</li>
+              <li>手机QQ空间</li>
+              <li>最新版QQ</li>
+              <li>腾讯社交广告</li>
+              <li>电脑管家</li>
+              <li>QQ浏览器</li>
+              <li>腾讯微云</li>
+              <li>腾讯云</li>
+              <li>企鹅FM</li>
+              <li>智能电视网</li>
+              <li>当贝市场</li>
+            </ul>
+          </div>
       </div>
-      <div class="footer-row2"></div>
-      <div class="footer-row3"></div>
+      <div class="footer-row2">
+        <div class="row2-left">
+          <h3>开放平台</h3>
+          <span>
+            QQ音乐开放平台</span>
+            <span>腾讯音乐人</span>
+        </div>
+        <div class="row2-mid">
+          <h3>TME集团官网</h3>
+          <span>
+            腾讯音乐</span>
+        </div>
+      </div >
+      <div class="footer-row3">
+        <p>关于腾讯 | About Tencent | 服务条款 | 用户服务协议 | 隐私政策 | 权利声明 | 广告服务 | 腾讯招聘 | 客服中心 | 网站导航</p>
+
+        <p>Copyright © 1998 - 2021 Tencent. All Rights Reserved.</p>
+        
+        <p>腾讯公司 版权所有 网络文化经营许可证：粤网文[2018]6725-2386号</p>
+      </div>
   </footer>
 </body>
 </html>
