--- a/public/work/work_list.html
+++ b/public/work/work_list.html
@@ -8,7 +8,7 @@
   <style></style>
 </head>
 <body>
-    <h1>商品类表 por_list.html</h1>
+    <h1>用户信息表 work_list.html</h1>
     <table width="80%" border="1" bordercolor="purple" align="center">
       <thead>
         <tr>
