--- a/public/work/work_login.html
+++ b/public/work/work_login.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/work_login.css">
   <script src="./js//work_login.js"></script>
   <title>Document</title>
 </head>
+
 <body>
-      <h1>用户登入</h1>
-      <h2 id="msg" style="color: red;"></h2>
-      <form action="#">
-         用户名： <input type="text" id="uname" name="uname"> <br>
-         密码： <input type="password" id="upwd" name="upwd"> <br>
-         <a href="./work_reg.html">没有账号，免费注册</a><br>
-         <input type="button" id="btn" name="button" onclick="login()" value="登入">
-      </form>
-      
+  <div class="login">
+    <h1>欢迎注册Q音乐</h1>
+    <h2>每一天,乐在沟通</h2>
+    <h2 id="msg" style="color: red;"></h2>
+    <form action="#">
+      用户名： <input type="text" id="uname" name="uname"> <br>
+      密码： <input type="password" id="upwd" name="upwd"> <br>
+      <a href="./work_reg.html">没有账号，免费注册</a><br>
+      <input type="button" id="btn" name="button" onclick="login()" value="登录">
+    </form>
+  </div>
+
 </body>
+
 </html>
